--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bankSearch",
+  "name": "banksearch",
   "version": "1.0.0",
   "description": "Bank search application",
   "author": "Mukesh Ghimire",
@@ -8,7 +8,8 @@
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
